# C14-NP1

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  python-publish.yml
downloader/: io_utils.py  net.py  orchestrator.py
script/: sendNotification.py  sendNotification.sh
scripts/: send_notification.py
src/: app.py
src/downloader/: segments.py  worker.py
src/gui/: gui.py
tests/: test_io_utils.py  test_segments.py
