[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c14-np1"
version = "0.1.5"
description = "Projeto da matéria de Engenharia de Software"
authors = [
  { name="Guilherme Ribeiro" },
  { name="Luan Robert" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.33.1"
]

[project.scripts]
c14-np1 = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]